added some markup

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,9 @@
   <body>
     <div class="centered-form">
       <div class="centered-form__box">
+        <h2 style="color:#7c5cbf">
+          CHAT APP<span style="font-size: 10px"> By: Yvonne Nkr</span>
+        </h2>
         <h1>Join</h1>
         <form action="/chat.html">
           <label for="">Display Name</label>
